# gh-mage

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
