[project]
name = "gh-mage"
version = "0.1.0"
description = "tiny ai agent project to help do github better"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "pygithub>=2.5.0",
    "smolagents>=1.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "pre-commit>=4.0.1",
]
